Mixed Playground/force-app/main/default/objects/Players_per_Game__c/Players_per_Game__c.object-meta.xml
<CustomObject>
    <label>Players per Game</label>
    <nameField>
        <label>Players per Game Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Players per Game</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>