Mixed Playground/force-app/main/default/objects/Players_per_Game__c/fields/Bet_Value__c.field-meta.xml
<CustomField>
    <fullName>Bet_Value__c</fullName>
    <label>Bet Value</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>